# get_config

./: configure.ac  strap_auto
src/: Makefile.am  get_config.c  get_config.h  main.c
